--- a/Inference/library.yaml
+++ b/Inference/library.yaml
@@ -25,6 +25,9 @@ image: cnvrg:v5.0
 language: python3
 
 arguments:
+  gunicorn_config:
+    - key: workers
+      value: '1'
   accept_files: false
   file_name: predict.py
   function_name: predict
