--- a/train_blueprint.yaml
+++ b/train_blueprint.yaml
@@ -73,7 +73,7 @@ tasks:
       gpu: 0
       hpu: 0
 
-    image: python:3.8.6
+    image: cnvrg/cnvrg:v5.0
     language: python3
 
     params:
@@ -100,7 +100,7 @@ tasks:
       gpu: 0
       hpu: 0
 
-    image: python:3.8.6
+    image: cnvrg/cnvrg:v5.0
     language: python3
 
     params:
@@ -131,7 +131,7 @@ tasks:
       gpu: 0
       hpu: 0
 
-    image: python:3.8.6
+    image: cnvrg/cnvrg:v5.0
     language: python3
 
     accept_files: false
