--- a/inference_blueprint.yaml
+++ b/inference_blueprint.yaml
@@ -18,7 +18,7 @@ tasks:
 
     type: deploy
 
-    library: inference
+    library: qna-inference
     library_version: 1.0.0
 
     kind: webservice
